# DIE

./: DIE.cabal  README.md
Shaders/: fragment.glsl  vertex.glsl
Textures/: troll.DDS
src/: Camera.hs  Main.hs  Shader.hs  Utils.hs  Vertices.hs
src/Linear/: Matrix.hs  Storable.hs  Transform.hs  Transposable.hs  V2.hs  V3.hs  V4.hs  Vector.hs
src/Texture/: Classes.hs  DDS.hs  Utils.hs
